--- a/gakaa-2024.html
+++ b/gakaa-2024.html
@@ -1808,7 +1808,7 @@ dlll='https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d6
 dll1='https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640';
 dlll2='https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640';                                                           
 dl3='https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640';
-dll3='https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640';                                                            
+dll3='https://docs.google.com/forms/d/e/1FAIpQLScgQe7etfPMGII-wzvNUkAtKyCPA5bSlsbXwgdwyord3cjvjw/viewform?usp=sf_link';                                                            
                                                          
  function dapp(){
 	window.open(dl);
@@ -1825,7 +1825,7 @@ window.open('https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691
 window.open('https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640');
 window.open('https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640');
 window.open('https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640');
-window.open('https://www.toprevenuegate.com/k7yxfuaz?key=6a3a320d1bd3fe7d34ba691c07e4d640');
+window.open('https://docs.google.com/forms/d/e/1FAIpQLScgQe7etfPMGII-wzvNUkAtKyCPA5bSlsbXwgdwyord3cjvjw/viewform?usp=sf_link');
 
 }  
 record(getQueryString('th'));
